# django-permanent

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  mypy.ini  pyproject.toml  runtests.py  setup.py  tox.ini
django_permanent/: __init__.py  deletion.py  managers.py  models.py  monkeypatches.py  query.py  related.py  settings.py  signals.py
django_permanent/tests/: __init__.py  cases.py  cond.py  models.py  tests.py
django_permanent/tests/test_app/: models.py
mypy_tests/: mypy.ini  settings.py
mypy_tests/app/: models.py
tests/: cond.py  models.py  settings.py  test_cases.py  tests.py
tests/test_app/: models.py
